--- a/gui/app/src/main/res/values/strings.xml
+++ b/gui/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="forgot_user_info">Forgot username or password?</string>
     <string name="problem">*</string>
     <string name="problem_text">Oops...</string>
+    <string name="version">Version: 1.0</string>
+    <string name="filter">Filter Results</string>
+    <string name="recipes">Number of Recipes:</string>
 </resources>
